syntax = "proto3";

package github.com.ovh.cds.sdk;
option go_package = "sdk";

import "google/protobuf/timestamp.proto";


//Log represents an execution log
//Generate *.pb.go files with: 
// 	protoc --go_out=plugins=grpc:. ./log.pb.go 
// 	protoc-go-inject-tag -input=./log.pb.go
//	=> github.com/favadi/protoc-go-inject-tag
message Log {
	// @inject_tag: db:"id"
	int64 id = 1;
	// @inject_tag: db:"pipeline_build_job_id"
	int64 pipelineBuildJobID = 2;
	// @inject_tag: db:"pipeline_build_id"
	int64 pipelineBuildID = 3;
	// @inject_tag: db:"start"
	google.protobuf.Timestamp start = 4;
	// @inject_tag: db:"last_modified"
	google.protobuf.Timestamp lastModified = 5;
	// @inject_tag: db:"done"
	google.protobuf.Timestamp done = 6;
	// @inject_tag: db:"step_order"
	int64 stepOrder = 7;
	// @inject_tag: db:"value"
	string val = 8;
}